--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -2,29 +2,30 @@
   "loc_app_name": "coolwell_app App",
   "loc_continue" : "Continue",
   "loc_skip": "Skip",
-  "loc_welcome": "Welcome",
-  "loc_welcome_txt" : "Start Your Crypto \nInvestment Today",
-  "loc_fb_txt" : "Continue with Facebook",
-  "loc_apple_txt": "Continue with Apple",
-  "loc_google_txt": "Continue with Google",
+  "loc_welcome": "Welcome!",
+  "loc_or": "or",
+  "loc_social_txt" : "Login with Social media",
+  "loc_fb_txt" : "Facebook",
+  "loc_google_txt": "Google",
   "loc_sign_up_txt": "Sing Up with phone or email",
   "loc_email_phone" : "EMAIL OR PHONE NUMBER",
-  "loc_signin": "Sign In",
+  "loc_signin": "Sign in",
   "loc_crt_acc": "Create Personal Account",
   "loc_not_acc": "Not looking for an account?",
   "loc_forgot_password" : "Forgot Password",
   "loc_sign_up": "Create Personal \nAccount",
   "loc_login": "Login",
   "loc_signup": "Sign Up",
-  "loc_verify_txt": "VERIFICATION CODE",
+  "loc_terms_txt": "Our Terms of Use & Privacy Policy.",
+  "loc_welcome_txt": "Welcome back!",
   "loc_verify": "Verification",
-  "loc_verify_txt1": "Enter the 8-digit Crypex security code and your phone number will be verified",
+  "loc_forgot_pass_txt1": "How would you like to recover your password?",
   "loc_dont_code": "Don't receive your code? ",
   "loc_resend": "Resend",
   "loc_okay" : "Okay",
   "loc_submit": "Submit",
-  "loc_deposite": "Deposit",
-  "loc_buy_cryp": "Buy Crypto",
+  "loc_create_acc": "Create an account",
+  "loc_hey": "Hey there,",
   "loc_widthdraw": "Withdraw",
   "loc_tot_asset" : "Totel Assets",
   "loc_actions": "Actions",
@@ -44,6 +45,7 @@
   "loc_new_password" : "New Password",
   "loc_confirm_pass" : "Confirm Password",
   "loc_forgot_pass" : "Forgot Password?",
+  "loc_login_signin": "Log in / Sign up",
   "loc_forgot_password_text" : "Please enter the email address linked with your account.",
   "loc_email_hint" : "Enter your Email",
   "loc_profile" : "Profile",
