--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -59,48 +59,23 @@
   "loc_email_id" : "Email Id",
   "loc_user_id" : "User Id",
   "loc_no_records" : "No Records Found...!",
-  "loc_wallet" : "Wallet",
-  "loc_exchange" : "Exchange",
-  "loc_side_home": "Home",
-  "loc_side_markets": "Markets",
-  "loc_side_trade": "Trade",
-  "loc_side_wallet": "Wallet",
-  "loc_wallet_address" : "Wallet Address",
-  "loc_address": "Address",
-  "loc_hide_bal": "Hide zero Balances",
-  "loc_side_nft": "Assets",
-  "loc_acc": "Account",
-  "loc_verification": "Verification",
-  "loc_security": "Security",
-  "loc_aml": "AML Check",
-  "loc_ctx_info": "Criptex Info",
-  "loc_notify" : "Notification",
-  "loc_choose" : "Choose Currency",
-  "loc_send" : "Send",
-  "loc_copy" : "Copy",
-  "loc_amt": "Amount",
-  "loc_merchant": "MERCHANT",
-  "loc_fee" : "Fee",
-  "loc_amt_receive": "Amount Received",
-  "loc_tot": "Total",
-  "loc_invite": "Invite Friends",
-  "loc_get_voucher": "USDT Cashback Voucher",
-  "loc_get" : "Get",
-  "loc_get_txt": "When Inbitee accumulatively deposits more than $50.",
-  "loc_reffer_head" : "Referal Details",
-  "loc_reffer_txt": "Copy the referal code and send it to the friend",
-  "loc_reffer_id": "Referal ID",
-  "loc_reffer_link": "Referal Link",
-  "loc_reffer_txt1": "Justo donec enim diam vulputate ut pharetra. Ut placerat orci nulla pellenNulla pellentesque dignissim enim sit. Orci eu lobortis elementum nibh tellus. ",
-  "loc_reffer_txt2": "Tincidunt nunc pulvinar sapien et ligula ullamcorper. A diam maecenas sed enim ut sem viverra. In hac habitasse platea dictumst quisque sagittis. Egestas tellus rutrum tellus pellentesque eu tincidunt ",
-  "loc_reffer_txt3": "Send it to your friend or show them \nthe QR code",
-  "loc_share": "Share",
-  "loc_download": "Download",
-  "loc_leader": "Leaderboard",
-  "loc_ch_plan": "Choose Plan ",
-  "loc_wallet_increase": "Wallet Increase:",
-  "loc_currency_check": "CURRENCY TO CHECK",
-  "loc_ckeck": "Check",
-  "loc_from": "FROM",
-  "loc_to": "TO"
+  "loc_via_email": "Via Email",
+  "loc_via_otp": "Via OTP",
+  "loc_forgot_txt1": "Still not working?",
+  "loc_forgot_txt2": "Contact Support.",
+  "loc_email_send": "Email Sent",
+  "loc_email_send_txt1": "Recovery email sent to ",
+  "loc_phone_sent_txt1": "Enter the 6 Digit code sent to ",
+  "loc_tummy_num": "your mobile number.",
+  "loc_enter_code": "Enter Code",
+  "loc_did_rcv_email": "Didn’t receive email?",
+  "loc_done":"Done",
+  "loc_success": "Success !",
+  "loc_location_hint": "Hi, nice to meet you!",
+  "loc_location_hint_1": "See Service around",
+  "loc_current_location": "Your current location",
+  "loc_some_location": "Some other location",
+  "loc_location_service": " LOCATION FOR SERVICE",
+  "loc_verify_num": "Verify Number"
+
 }
