--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -81,6 +81,7 @@
   "loc_buy_save": "Buy More Save More",
   "loc_cleaning": "Cleaning",
   "loc_view_details": "View details",
-  "loc_add": "Add "
+  "loc_add": "Add ",
+  "loc_service_coolwell": "Cool well expert technicians",
 
 }
