--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -85,6 +85,10 @@
   "loc_proceed_book": "Proceed to book",
   "loc_service_note": "Services notes",
   "loc_faq": "FAQ",
-  "loc_summary": "Summary"
+  "loc_summary": "Summary",
+  "loc_search": "Serach",
+  "loc_our_services": "Our services",
+  "loc_book": "Book now",
+  "loc_recent_book": "Recently Booked services"
 
 }
