profile screen design 20-04-23

--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -78,6 +78,7 @@
   "loc_location_service": " LOCATION FOR SERVICE",
   "loc_verify_num": "Verify Number",
   "loc_services": "Services",
+  "loc_service": "Service",
   "loc_buy_save": "Buy More Save More",
   "loc_cleaning": "Cleaning",
   "loc_view_details": "View details",
@@ -93,6 +94,26 @@
   "loc_side_cool": "Cool well",
   "loc_side_service": "Service",
   "loc_side_history": "History",
-  "loc_side_account": "Account"
+  "loc_side_account": "Account",
+  "loc_delivery_ins": "Delivery instruction",
+  "loc_avoid_call": "Avoid calling before reaching the location ",
+  "loc_coupon_offer": "Coupons and offers",
+  "loc_payment_sum": "PaymentSummary",
+  "loc_total_item": "Items total",
+  "loc_item_disc": "Items Discount",
+  "loc_tax_fee": "Tax and fee",
+  "loc_total": "Total",
+  "loc_pay_method": "Payment method",
+  "loc_view_cart": "View cart",
+  "loc_ac_txt1": "AC Safety Guidelines",
+  "loc_ac_txt2": "These steps to ensure your safty",
+  "loc_proceed": "Proceed",
+  "loc_booking": "Booking",
+  "loc_your_add": "Your Addresses",
+  "loc_serv_his": "Service History",
+  "loc_help_feed": "Help & Feedback",
+  "loc_edit_profile": "Edit profile",
+  "loc_deactive": "Deactivate account",
+  "loc_dele_acc": "Delete Account"
 
 }
