--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -147,6 +147,7 @@
   "loc_share_feedback": "Share feedback",
   "loc_know_more": "Know more",
   "loc_booked_serv": "Booked Services",
-  "loc_deep_clean": "Deep clean AC Service"
+  "loc_deep_clean": "Deep clean AC Service",
+  "loc_ok": "Okay"
 
 }
