--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -70,6 +70,7 @@
   "loc_enter_code": "Enter Code",
   "loc_did_rcv_email": "Didn’t receive email?",
   "loc_done":"Done",
+  "loc_remove":"Remove",
   "loc_success": "Success !",
   "loc_location_hint": "Hi, nice to meet you!",
   "loc_location_hint_1": "See Service around",
