--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -159,6 +159,8 @@
   "loc_you_got": "You Got",
   "loc_on_progrss": "On progress",
   "loc_track_location": "Track location",
-  "loc_proceed_to_process": "Proceed to Process"
+  "loc_proceed_to_process": "Proceed to Process",
+  "loc_address_detail": "Address details",
+  "loc_address": "Address"
 
 }
