--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -84,7 +84,7 @@
   "loc_cleaning": "Cleaning",
   "loc_view_details": "View details",
   "loc_service_coolwell": "Cool well expert technicians",
-  "loc_proceed_book": "Proceed to book",
+  "loc_proceed_bookloc_proceed_book": "Proceed to book",
   "loc_service_note": "Services notes",
   "loc_faq": "FAQ",
   "loc_summary": "Summary",
