update of designs 05-06-2023_2

--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -1,5 +1,5 @@
 {
-  "loc_app_name": "Cool Well",
+  "loc_app_name": "coolwell_app App",
   "loc_continue" : "Continue",
   "loc_skip": "Skip",
   "loc_welcome": "Welcome!",
