update api changes 23-06-23_1

--- a/assets/language/localization_en.json
+++ b/assets/language/localization_en.json
@@ -170,6 +170,6 @@
   "loc_add_add": "Add Address",
   "loc_select": "Select",
   "loc_con_sup": "Contact Support",
-  "loc_talk": "Talk to Technician"
-
+  "loc_talk": "Talk to Technician",
+  "loc_cus_support": "24x7 customer support"
 }
